# ContentGen

./: .env.example  .gitignore  Dockerfile  Makefile  Makefile.setup  README.md  app.py  docker-compose.yml  docker-compose.yml.backup  gradio_ui.py  pyproject.toml  start.sh
routes/: tasks.py
src/contentgen/: celery.py  config.py  database.py  extensions.py  llm.py
src/contentgen/routes/: campaigns.py  tasks.py
