[project]
name = "ContentGen"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Sadman Naib", email = "samsikder47@gmail.com" },
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "gradio>=5.44.1",
    "flask>=3.1.2",
    "transformers>=4.56.1",
    "huggingface-hub>=0.34.4",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "langchain-huggingface>=0.3.1",
    "sentence-transformers>=5.1.0",
    "celery>=5.5.3",
]


[tool.pdm]
distribution = false
